<resources>
    <string name="app_name">Cook &amp; Shop</string>
    <string name="title_activity_main">Cook &amp; Shop</string>
    <!-- Strings used for fragments for navigation -->

    <!--categories-->
    <string name="fruit">Fruit</string>
    <string name="drink">Drink</string>
    <string name="meat">Meat</string>
    <string name="other">Other</string>

    <!--Array used for teh category spinner-->
    <string-array name="categories">
        <item>Obst</item>
        <item>Gemüse</item>
        <item>Getränk</item>
        <item>Fleisch</item>
        <item>Sonstiges</item>
    </string-array>


    <!--Array used for teh category spinner-->
    <string-array name="themes">
        <item>Dark</item>
        <item>Light</item>
        <item>Lilah</item>
    </string-array>

    <!--warnings-->
    <string name="no_name_warning">You need to insert at least the name</string>
    <string name="no_name_and_descr_warning" translatable="false">You need to insert name and description</string>

    <string name="title_home">Home</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="weight">Weight</string>
    <string name="new_article">Add new Article</string>
    <string name="new_step">"Add new Step "</string>
    <string name="timer">Timer</string>
    <string name="timer_descriptional_text">you can insert a timer here. when you cook the recipe you can easily set a timer for the step</string>
    <string name="step">Steps</string>
    <string name="article">Articles</string>
    <string name="add_article">Add Article</string>
    <string name="synchronize">Synchronisze</string>
    <string name="synchronize_recipes">Snchronize your recipe list list via Bluetooth</string>
    <string name="add_step">Add Step</string>
    <string name="vegetable">Vegetable</string>
    <string name="string_timer_warning">The timer needs to be given in seconds</string>
    <string name="synchronize_articles">Snchronize your shopping- and storage list via Bluetooth</string>
    <string name="export_import">"Export or import Recipes "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">dark mode</string>
    <string name="weight_unit_discription">Weich weight unit do ou prefere</string>
    <string name="weight_unit">weight unit</string>
    <string name="settings_text">Configure the App to you needs</string>
</resources>

